--- a/base.css
+++ b/base.css
@@ -14,6 +14,11 @@
   pointer-events: none;
 }
 
+form {
+  margin: auto;
+  width: max-content;
+}
+
 input {
   border: 1px solid #000;
   width: 100px;
@@ -29,10 +34,10 @@ output {
 
 #board {
   margin: auto;
+  border-collapse: separate;
 }
 
 #board td {
   width: 16px;
   height: 16px;
-  border: 1px solid #000;
 }
