--- a/tiles.css
+++ b/tiles.css
@@ -12,13 +12,9 @@
 }
 
 #board .open[data-mine] {
-  background-image: url("images/mineA.png");
+  background-image: url("images/mine.png");
   background-repeat: no-repeat;
   background-position: 1px 1px;
-}
-
-#board .open[style="background-color: red;"] {
-  background-image: url("images/boom.png");
 }
 
 #board .open[data-count]::after {
